syntax = "proto3";

service UserService {
  rpc Signup (SignupRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (AuthResponse);
}

message SignupRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message AuthResponse {
  string message = 1;
  string access_token = 2;
  string refresh_token = 3;
  string user_id = 4;
  string email = 5;
  string name = 6;
}